update github.com/kissjgabi/kiss jekyll step-by-step intro

--- a/stepByStep04.html
+++ b/stepByStep04.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
-    <title>Step by step</title>
+    <title>Step by step 4</title>
     <style>
 		p { text-align=justify;}
         .new {
@@ -61,6 +61,20 @@ We have a reusable code yet. We are able to create a new <span>&nbsp;<code>about
 
         This page tells you a little bit about me. They have a short text.
     </code></pre>
+
+    <p>
+Amend you should upload to the github.
+    </p>
+    <pre><code>
+        ~/git/kissjgabiGIT/kiss$ git add .
+        ~/git/kissjgabiGIT/kiss$ git commit -m "start github.com/kissjgabi/kiss intro"
+        ~/git/kissjgabiGIT/kiss$ git push
+    </code></pre>
+
+    <p>
+Publish the repository on the <a href="https://pages.github.com/">GitHub Pages</a> for free.<br />
+At least the website has been displayed at <a href="https://kissjgabi.github.io/kiss/">kissjgabi.github.io/kiss</a>.
+    </p>
 
   </body>
 </html>
