--- a/stepByStep00.html
+++ b/stepByStep00.html
@@ -1,4 +1,5 @@
 ---
+title: k.i.s.s.
 ---
 <!doctype html>
 <html>
@@ -15,7 +16,7 @@
     </style>
   </head>
   <body>
-    <h1>K.I.S.S.</h1>
+    <h1>{{ title | capitalize }}</h1>
 
 	<p style="text-align=justify;">	</p>
 
