--- a/stepByStep00.html
+++ b/stepByStep00.html
@@ -1,22 +1,8 @@
 ---
+layout: mydefault
 title: k.i.s.s.
 ---
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
-    <title>Step by step</title>
-
-    <style>
-	    p { text-align=justify;}
-        .new {
-                background-color: yellow; color: navy;
-        }
-    </style>
-  </head>
-  <body>
-    <h1>{{ title | capitalize }}</h1>
+    <h1>{{ page.title | capitalize }}</h1>
 
 	<p style="text-align=justify;">	</p>
 
@@ -27,8 +13,4 @@ title: k.i.s.s.
     ~/git/kissjgabiGIT/kiss$ git remote add origin https://github.com/kissjgabi/kiss.git
     ~/git/kissjgabiGIT/kiss$ git pull origin master
     </code></pre>
-
-  </body>
-</html>
-
 
