update github.com/kissjgabi/kiss jekyll step-by-step tutorial

--- a/stepByStep00.html
+++ b/stepByStep00.html
@@ -1,16 +1,19 @@
 ---
-layout: mydefault
-title: k.i.s.s.
+layout: sbsdefault
+title: s.b.s.
 ---
-    <h1>{{ page.title | capitalize }}</h1>
+    <a href="#">target</a>
 
 	<p style="text-align=justify;">	</p>
 
-    <a href="#">target</a>
-
     <pre><code>
-    ~/git/kissjgabiGIT/kiss$ git init
-    ~/git/kissjgabiGIT/kiss$ git remote add origin https://github.com/kissjgabi/kiss.git
-    ~/git/kissjgabiGIT/kiss$ git pull origin master
+    https://www.ruby-lang.org/en/
+    marked <mark>------------</mark> line
+    https://shopify.dev/docs/liquid
+
+    &lt;a href="#">target&lt;/a>
+
+    &lt;p style="text-align=justify;"> text &lt;/p>
+
     </code></pre>
 
