--- a/stepByStep01.html
+++ b/stepByStep01.html
@@ -1,18 +1,7 @@
 ---
+layout: sbsdefault
+title: start
 ---
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
-    <title>Step by step 1</title>
-
-    <style>
-		p { text-align=justify;}
-    </style>
-  </head>
-  <body>
-    <h1>Start</h1>
 	<p> 
     First follow the <a href="https://jekyllrb.com/docs/">Quickstart</a>'s instructions to install a full Ruby development environment, Jekyll and bundler gems. Then for the first time the 
     <a href="https://jekyllrb.com/docs/step-by-step/01-setup/">
@@ -21,10 +10,7 @@
 is very useful.
     </p>
     <p>
-I have described the essence of the tutorial 
+The essence of the tutorial is described here 
     <a href="stepByStep02.html">in the following</a>.
 	</p>
-  </body>
-</html>
-
 
