--- a/stepByStep04.html
+++ b/stepByStep04.html
@@ -1,19 +1,7 @@
 ---
+layout: sbsdefault
+title: layouts
 ---
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
-    <title>Step by step 4</title>
-    <style>
-		p { text-align=justify;}
-        .new {
-                background-color: yellow; color: navy;
-        }
-    </style>
-  <body>
-    <h1>Layouts</h1>
 
 	<p>
 Layouts are templates that wrap around your content. They live in a directory called <span>&nbsp;<code>_layouts</code>&nbsp;</span> in the root.<br />
@@ -76,7 +64,5 @@ Publish the repository on the <a href="https://pages.github.com/">GitHub Pages</
 At least the website has been displayed at <a href="https://kissjgabi.github.io/kiss/">kissjgabi.github.io/kiss</a>.
     </p>
 
-  </body>
-</html>
 
 
