--- a/stepByStep02.html
+++ b/stepByStep02.html
@@ -1,23 +1,12 @@
 ---
+layout: sbsdefault
+title: create
 ---
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
-    <title>Step by step 2</title>
-
-    <style>
-	p { text-align=justify;}
-   </style>
-  </head>
-  <body>
-    <h1>A simple new project</h1>
 	<p>
-Make a new repository <span>&nbsp;<code>https://github.com/kissjgabi/kiss.git</code>&nbsp;</span> on the github.  
+Create a new repository <span>&nbsp;<code>https://github.com/kissjgabi/kiss.git</code>&nbsp;</span> on the github.  
     </p>
     <p>
-Make a root directory for the project on your local computer and use it:  
+Create a root directory for the project on your local computer and use it:  
     </p>
 
     <pre><code>
@@ -99,7 +88,4 @@ Start the server:
     <p>
 Go to <span>&nbsp;<code>http://localhost:4000/kiss</code>&nbsp;</span> in your browser.
     </p>
-
-  </body>
-</html>
 
