update github.com/kissjgabi/kiss jekyll step-by-step tutorial

--- a/stepByStep03.html
+++ b/stepByStep03.html
@@ -21,10 +21,10 @@ Insert in the <span>&nbsp;<code>index.html</code>&nbsp;</span> the yellow lines:
 &lt;html>
   &lt;head>
     &lt;meta charset="utf-8">
-    &lt;title><mark>{<span>{ page.title }</span>}</mark>&lt;/title>
+    &lt;title><mark>{<c>{ page.title }</c>}</mark>&lt;/title>
   &lt;/head>
   &lt;body>
-    &lt;h1><span class="new">{<span>{ "k.i.s.s." | capitalize }</span>}</span>&lt;/h1>
+    &lt;h1><mark>{<c>{ "k.i.s.s." | capitalize }</c>}</mark>&lt;/h1>
 	&lt;p>
 	  Keep it simple stupid.
 	&lt;/p>
