update github.com/kissjgabi/kiss jekyll step-by-step tutorial

--- a/stepByStep00.html
+++ b/stepByStep00.html
@@ -17,3 +17,13 @@ title: s.b.s.
 
     </code></pre>
 
+    <pre><code>
+        .
+        ├── assets
+        │   ├── css
+        │   ├── images
+        │   └── js
+        ├── _sass
+        ...
+    </code></pre>
+
