--- a/stepByStep04.html
+++ b/stepByStep04.html
@@ -4,23 +4,31 @@ title: layouts
 ---
 
 	<p>
-Layouts are templates that wrap around your content. They live in a directory called <span>&nbsp;<code>_layouts</code>&nbsp;</span> in the root.<br />
+Layouts are templates that wrap around your content. They live in a directory called <span>&nbsp;<code>_layouts</code>&nbsp;</span> in the root.
+These layouts would be override the Minima-theme layouts.<br />
 Create your first layout at <span>&nbsp;<code> _layouts/default.html</code>&nbsp;</span> with the following content:
     </p>
     <pre><code>
         <mark>---</mark>
-        <mark>layout: default</mark>
-        <mark class="new">---</mark>
-        &lt;!doctype html>
-        &lt;html>
-          &lt;head>
-            &lt;meta charset="utf-8">
-            &lt;title>{<c>{ page.title }</c>}&lt;/title>
-          &lt;/head>
-          &lt;body>
+        <mark>layout: default</mark>        # we get Minima's default
+        <mark>---</mark>
+        <del>&lt;!doctype html></del>
+        <del>&lt;html></del>
+          <del>&lt;head></del>
+            <del>&lt;meta charset="utf-8"></del>
+            <del>&lt;title>{<c>{ page.title }</c>}&lt;/title></del>
+          <del>&lt;/head></del>
+          <del>&lt;body></del>
             <mark>{<c>{ content }</c>}</mark>
-          &lt;/body>
-        &lt;/html>
+          <del>&lt;/body></del>
+        <del>&lt;/html></del>
+
+        <del>Reused from Minima's „default” layout</del>
+        K.i.s.s. & write:
+        <mark>---</mark>
+        <mark>layout: default</mark>        # Minima
+        <mark>---</mark>
+        <mark>{<c>{ content }</c>}</mark>
     </code></pre>
 
     <p>
