--- a/stepByStep07.html
+++ b/stepByStep07.html
@@ -63,8 +63,8 @@ Open <span>&nbsp;<code>_data/navigation.yml</code>&nbsp;</span> and add an entry
       link: /
     - name: About
       link: /about.html
-    - name: Blog
-      link: /blog.html
+    <mark>- name: Blog      </mark>
+    <mark>  link: /blog.html</mark>
     </code></pre>
 
 
