--- a/stepByStep06.html
+++ b/stepByStep06.html
@@ -1,6 +1,13 @@
 ---
-layout: sbsdefault
+layout: mydefault
 title: assets
+category: programming
+tags: [web, jekyll]
+sitemap:
+    lastnod: 2020-04-12
+    priority: 0.75
+    changefreq: 'none'
+    exclude: 'no'
 ---
 
 Inlining the styles used in <span>&nbsp;<code>_includes/mynavigation.html</code>&nbsp;</span> is not a best practice, let’s style the current page with a class instead.<br />
