--- a/2020-04-12-stepByStep00.html
+++ b/2020-04-12-stepByStep00.html
@@ -1,6 +1,13 @@
 ---
-layout: sbsdefault
+layout: mydefault
 title: s.b.s.
+categories: programming
+tags: [web, jekyll]
+sitemap:
+    lastnod: 2020-04-12
+    priority: 0.75
+    changefreq: 'none'
+    exclude: 'no'
 ---
     <a href="#">target</a>
 
