--- a/stepByStep01.html
+++ b/stepByStep01.html
@@ -1,7 +1,15 @@
 ---
-layout: sbsdefault
+layout: mydefault
 title: start
+category: programming
+tags: [web, jekyll]
+sitemap:
+    lastnod: 2020-04-12
+    priority: 0.75
+    changefreq: 'none'
+    exclude: 'no'
 ---
+
 	<p> 
     First follow the <a href="https://jekyllrb.com/docs/">Quickstart</a>'s instructions to install a full Ruby development environment, Jekyll and bundler gems. Then for the first time the 
     <a href="https://jekyllrb.com/docs/step-by-step/01-setup/">
