--- a/stepByStep02.html
+++ b/stepByStep02.html
@@ -1,7 +1,15 @@
 ---
-layout: sbsdefault
+layout: mydefault
 title: create
+category: programming
+tags: [web, jekyll]
+sitemap:
+    lastnod: 2020-04-12
+    priority: 0.75
+    changefreq: 'none'
+    exclude: 'no'
 ---
+
 	<p>
 Create a new repository <span>&nbsp;<code>https://github.com/kissjgabi/kiss.git</code>&nbsp;</span> on the github.  
     </p>
