--- a/stepByStep04.html
+++ b/stepByStep04.html
@@ -1,6 +1,13 @@
 ---
-layout: sbsdefault
+layout: mydefault
 title: layouts
+category: programming
+tags: [web, jekyll]
+sitemap:
+    lastnod: 2020-04-12
+    priority: 0.75
+    changefreq: 'none'
+    exclude: 'no'
 ---
 
 	<p>
