--- a/_posts/2020-04-12-stepByStep00.html
+++ b/_posts/2020-04-12-stepByStep00.html
@@ -1,15 +1,16 @@
 ---
 layout: mydefault
+author: kovax
 title: s.b.s.
 categories: programming
-tags: [web, jekyll]
+tag: jekyll
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-    <a href="#">target</a>
+    <a href="#">Step by step</a>
 
 	<p style="text-align=justify;">	</p>
 
