--- a/_posts/2020-04-12-stepByStep05.html
+++ b/_posts/2020-04-12-stepByStep05.html
@@ -1,8 +1,9 @@
 ---
 layout: mydefault
+author: kovax
 title: includes
 category: programming
-tags: [web, jekyll]
+tag: jekyll
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
