update stage one github.com/kissjgabi/kiss

--- a/_posts/2020-04-12-stepByStep01.html
+++ b/_posts/2020-04-12-stepByStep01.html
@@ -1,7 +1,8 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: start
+title: "start with Jekyll"
+meta: "step by step"
 category: programming
 tag: jekyll
 sitemap:
