--- a/_posts/2020-04-12-stepByStep02.html
+++ b/_posts/2020-04-12-stepByStep02.html
@@ -1,7 +1,8 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: create
+title: "create blog with Jekyll"
+meta: "step by step"
 category: programming
 tag: jekyll
 sitemap:
