--- a/_posts/2020-04-12-stepByStep03.html
+++ b/_posts/2020-04-12-stepByStep03.html
@@ -1,7 +1,8 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: liquid
+title: "use liquid in Jekyll"
+meta: "step by step"
 category: programming
 tag: jekyll
 sitemap:
