--- a/_posts/2020-04-12-stepByStep05.html
+++ b/_posts/2020-04-12-stepByStep05.html
@@ -1,7 +1,8 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: includes
+title: "includes in Jekyll's layouts"
+meta: "step by step"
 category: programming
 tag: jekyll
 sitemap:
