--- a/_posts/2020-04-12-stepByStep07.html
+++ b/_posts/2020-04-12-stepByStep07.html
@@ -1,7 +1,8 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: blogging
+title: "Jekyll's blogging"
+meta: "step by step"
 category: programming
 tag: jekyll
 sitemap:
