--- a/_posts/2020-04-12-stepByStep08.html
+++ b/_posts/2020-04-12-stepByStep08.html
@@ -1,7 +1,8 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: s.b.s.
+title: "use collections in Jekyll"
+meta: "step by step"
 category: programming
 tag: jekyll
 sitemap:
@@ -15,7 +16,7 @@ sitemap:
 Add to <span>&nbsp;<code>_config.yml</code>&nbsp;</span> in the root the following lines:
     </p>
     <pre><code>
-    collections:    # autor collections, each autor has their own page
+    collections:    # author collections, each author has their own page
       authors:
         output: true
 
