--- a/_posts/2020-04-12-stepByStep00.html
+++ b/_posts/2020-04-12-stepByStep00.html
@@ -1,12 +1,13 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: s.b.s.
-categories: programming
+title: "s.b.s. some styles"
+meta: "step by step capitel styles"
+category: programming
 tag: jekyll
 sitemap:
     lastnod: 2020-04-12
-    priority: 0.75
+    priority: 0.25
     changefreq: 'none'
     exclude: 'no'
 ---
@@ -26,12 +27,14 @@ sitemap:
     </code></pre>
 
     <pre><code>
-        .
+        ...
+        │
         ├── assets
         │   ├── css
         │   ├── images
         │   └── js
         ├── _sass
+        │
         ...
     </code></pre>
 
