--- a/_posts/2020-04-12-stepByStep06.html
+++ b/_posts/2020-04-12-stepByStep06.html
@@ -1,7 +1,8 @@
 ---
-layout: mydefault
+layout: post
 author: kovax
-title: assets
+title: "use assets in Jekyll"
+meta: "step by step"
 category: programming
 tag: jekyll
 sitemap:
