update stage one github.com/kissjgabi/kiss

--- a/_posts/2020-04-12-stepByStep00.html
+++ b/_posts/2020-04-12-stepByStep00.html
@@ -5,6 +5,7 @@ title: "s.b.s. some styles"
 meta: "step by step capitel styles"
 category: programming
 tag: jekyll
+image: no_image.jpg
 sitemap:
     lastnod: 2020-04-12
     priority: 0.25
