--- a/_posts/2020-04-12-stepByStep04.html
+++ b/_posts/2020-04-12-stepByStep04.html
@@ -5,6 +5,7 @@ title: "page layouts Jekyll's blog"
 meta: "step by step"
 category: programming
 tag: jekyll
+image: no_image.jpg
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
