--- a/_posts/2020-04-12-stepByStep08.html
+++ b/_posts/2020-04-12-stepByStep08.html
@@ -5,6 +5,7 @@ title: "use collections in Jekyll"
 meta: "step by step"
 category: programming
 tag: jekyll
+image: no_image.jpg
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
