update stage one github.com/kissjgabi/kiss

--- a/_posts/2020-04-12-stepByStep04.html
+++ b/_posts/2020-04-12-stepByStep04.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "page layouts Jekyll's blog"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: page layouts Jekyll's blog
+meta: step by step
+shortcontent: step by step - layouts and templates
+tag: [jekyll, web, computing]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
 	<p>
 Layouts are templates that wrap around your content. They live in a directory called <span>&nbsp;<code>_layouts</code>&nbsp;</span> in the root.
 These layouts would be override the Minima-theme layouts.<br />
