--- a/_posts/2020-04-12-stepByStep05.html
+++ b/_posts/2020-04-12-stepByStep05.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "includes in Jekyll's layouts"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: includes in Jekyll's layouts
+meta: step by step
+shortcontent: step by step - layouts and includes
+tag: [jekyll, web, computing]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
 	<p>
 The <span>&nbsp;<code>include</code>&nbsp;</span> tag allows you to include content from another file stored in an <span>&nbsp;<code>_includes</code>&nbsp;</span> folder. Includes are useful for having a single source for source code that repeats around the site or for improving the readability.<br />
 Navigation source code can get complex so sometimes it’s nice to move it into an include.
