--- a/_posts/2020-04-12-stepByStep07.html
+++ b/_posts/2020-04-12-stepByStep07.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "Jekyll's blogging"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: Jekyll's blogging
+meta: step by step
+shortcontent: step by step - blogging how to
+tag: [jekyll, web, computing]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
     <p>
 In true <a href="https://jekyllrb.com/docs/step-by-step/08-blogging/">Jekyll style, blogging</a> is powered by text files only.<br />
 Blog posts live in a folder called <span>&nbsp;<code>_posts</code>&nbsp;</span>. The filename for posts have a special format: the publish date, then a title, followed by an extension.
