--- a/_posts/2020-04-12-stepByStep08.html
+++ b/_posts/2020-04-12-stepByStep08.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "use collections in Jekyll"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: use collections in Jekyll
+meta: step by step
+shortcontent: step by step - collections as categories and tags
+tag: [jekyll, web, computing]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
     <p>
 Add to <span>&nbsp;<code>_config.yml</code>&nbsp;</span> in the root the following lines:
     </p>
