--- a/_posts/2020-04-12-stepByStep01.html
+++ b/_posts/2020-04-12-stepByStep01.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "start with Jekyll"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: start with Jekyll
+meta: step by step
+shortcontent: step by step - quickstarts instructions
+tag: [jekyll, web, computing]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
 	<p> 
     First follow the <a href="https://jekyllrb.com/docs/">Quickstart</a>'s instructions to install a full Ruby development environment, Jekyll and bundler gems. Then for the first time the 
     <a href="https://jekyllrb.com/docs/step-by-step/01-setup/">
