--- a/_posts/2020-04-12-stepByStep02.html
+++ b/_posts/2020-04-12-stepByStep02.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "create blog with Jekyll"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: create blog with Jekyll
+meta: step by step
+shortcontent: step by step - create a new repository
+tag: [jekyll, web, computing]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
 	<p>
 Create a new repository <span>&nbsp;<code>https://github.com/kissjgabi/kiss.git</code>&nbsp;</span> on the github.  
     </p>
