--- a/_posts/2020-04-12-stepByStep03.html
+++ b/_posts/2020-04-12-stepByStep03.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "use liquid in Jekyll"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: use liquid in Jekyll
+meta: step by step
+shortcontent: step by step - use liquid
+tag: [jekyll, web, computing, liquid]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
 	<p>
 Please refere 
 <a href="https://jekyllrb.com/docs/step-by-step/02-liquid/"> Liquid </a> and 
