--- a/_posts/2020-04-12-stepByStep06.html
+++ b/_posts/2020-04-12-stepByStep06.html
@@ -1,18 +1,19 @@
 ---
 layout: post
 author: kovax
-title: "use assets in Jekyll"
-meta: "step by step"
 category: programming
-tag: jekyll
-image: no_image.jpg
+title: use assets in Jekyll
+meta: step by step
+shortcontent: step by step - assets in Jekyll
+tag: [jekyll, web, computing]
+image:
+subtitle:
 sitemap:
     lastnod: 2020-04-12
     priority: 0.75
     changefreq: 'none'
     exclude: 'no'
 ---
-
 Inlining the styles used in <span>&nbsp;<code>_includes/mynavigation.html</code>&nbsp;</span> is not a best practice, let’s style the current page with a class instead.<br />
     </p>
     <pre><code>
