update stage one github.com/kissjgabi/kiss

--- a/_posts/2020-04-12-stepByStep03.html
+++ b/_posts/2020-04-12-stepByStep03.html
@@ -46,5 +46,5 @@ Insert in the <span>&nbsp;<code>index.html</code>&nbsp;</span> the yellow lines:
 	<p>
 It gives the following result:
     </p>
-<div style="text-align:center"><img src="assets/images/index.jpg" /></div>
+<div style="text-align:center"><img src="/assets/images/index.jpg" /></div>
 
